# http_server

./: .gitignore  Makefile  README.md  pyproject.toml  run_server.py
.github/workflows/: ci.yml
scripts/: run_locust.py
server/: http_server.py  request_handler.py  utils.py
tests/functional/: test_functional.py
tests/load/: test_load.py
