[project]
name = "http-server"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksei",email = "bscadet@yandex.ru"}
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "locust[console] (>=2.37.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

